<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.neuro</groupId>
    <artifactId>neurotherapy-dashboard</artifactId>
    <version>1.1.0</version>
    <packaging>jar</packaging>

    <name>Neurotherapy Dashboard</name>
    <description>Patient Management System for Neurotherapy Clinic</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <mysql.version>8.0.33</mysql.version>
        <pdfbox.version>2.0.29</pdfbox.version>
        <log4j.version>2.23.1</log4j.version>
        <maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <!-- MySQL Connector -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <!-- Apache PDFBox for PDF generation -->
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>${pdfbox.version}</version>
        </dependency>
        <dependency>
    <groupId>org.mindrot</groupId>
    <artifactId>jbcrypt</artifactId>
    <version>0.4</version>
</dependency>
        <!-- Log4j 2 (API + core) -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <!-- Bridge any third-party libs (e.g. PDFBox) that still log via SLF4J -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- JUnit 5 (test scope) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    

    <build>
        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <!-- Surefire (JUnit 5 support) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <!-- Assembly Plugin for creating executable JAR with dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.neuro.application.NeuroApplication</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>Dashboard</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- JAR Plugin for manifest -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.neuro.application.NeuroApplication</mainClass>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!-- Copy db.properties next to the built JAR in target/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-db-properties</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/main/resources</directory>
                                    <includes>
                                        <include>db.properties</include>
                                    </includes>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- yGuard obfuscation via antrun -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>obfuscate</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <taskdef name="yguard"
                                         classname="com.yworks.yguard.YGuardTask">
                                    <classpath>
                                        <pathelement location="${project.basedir}/tools/yguard.jar"/>
                                        <pathelement location="${project.basedir}/tools/asm-9.6.jar"/>
                                    </classpath>
                                </taskdef>

                                <yguard>
                                    <inoutpair in="${project.build.directory}/Dashboard.jar"
                                               out="${project.build.directory}/Dashboard-${project.version}-${maven.build.timestamp}.jar"/>

                                    <rename mainclass="com.neuro.application.NeuroApplication"
                                            logfile="${project.build.directory}/yguard-rename.log">
                                        <keep>
                                            <class name="com.neuro.application.NeuroApplication"
                                                   methods="public" fields="none"/>
                                            <class implements="java.lang.Throwable"
                                                   methods="public" fields="public"/>
                                            <class name="com.neuro.model.ClinicInfo"
                                                   methods="public" fields="public"/>
                                            <class name="com.neuro.model.Patient"
                                                   methods="public" fields="public"/>
                                            <class name="com.neuro.model.PatientColumns"
                                                   methods="public" fields="public"/>


                                        <class classes="private" methods="private" fields="private">
                                            <patternset>
                                                <include name="com.mysql.**"/>
                                                <include name="org.slf4j.**"/>
                                                <include name="org.apache.logging.log4j.**"/>
                                            </patternset>
                                        </class>
                                        </keep>
                                    </rename>
                                </yguard>

                                <echo message="Release JAR: ${project.build.directory}/Dashboard-${project.version}-${maven.build.timestamp}.jar"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
